2004-05-14 02:39 Gregory John Casamento <greg_casamento@yahoo.com>

	* GormClassManager.m: Moved the call to _touch to the bottom of
	all of the methods.   This should be called only after all changes
	have been made to the class.
	* GormImageInspector.m: setObject: wasn't calling [super setObject:]
	* GormInspectorsManager.m: [GormNotApplicableInspector setObject:]
	added code to prevent crash.
	* GormObjectEditor.m: Removed some commented-out code.
	* GormSoundInspector.m: Added code to set the _currentSound to nil if
	the selection sent is empty.
	* GormPreferences.gorm: Added line.
	
2004-05-13 18:47 Gregory John Casamento <greg_casamento@yahoo.com>

	* Gorm.m: Removed some commented out code.  Removed commented out
	RELEASE statements, now that AUTORELEASE is used.
	* GormDocument.m: [GormDocument dealloc] added openEditors to the
	set of things released.  [GormDocument editorForObject:create:] when
	a new editor is created, add it to the master list of editors.   This
	makes it easier to send the close message to all of the editors upon
	shutdown.  [GormDocument editor:dicCloseForObject:] removes the editor
	from the list of editors. [GormDocument _closeAllEditors] closes all
	of the editors in the document using the new list.
	* GormDocument.h: Added member variable openEditors.
	* Palettes/GormMenuEditor.m: Added category to allow testing when
	a menu is visible so that we can avoid sending the close message to
	it.  This prevents the harmless message "Invalidparm: ordered invalid 
	window 0" from appearing when the document is being closed.
	
2004-05-13 01:03 Gregory John Casamento <greg_casamento@yahoo.com>

	NOTE: These changes might unstabilize things a bit.
	* Gorm.m: The document is now autoreleased when it is instantiated.
	This change was made in [Gorm application:openFile:],[Gorm open:], 
	[Gorm newGormDocument:].
	* GormDocument.m: Addition of a method called 
	[GormDocument _closeAllEditors] this closes all of the editors from